switch over to ring buffers